--- a/NPM Project/main.scss
+++ b/NPM Project/main.scss
@@ -2,6 +2,7 @@
 // Option A: Include all of Bootstrap
 
 // Include any default variable overrides here (though functions won’t be available)
+$danger-color: #fdfcfc;
 
 @import "./node_modules/bootstrap/scss/bootstrap";
 
